# tourism-web

./: .env  demo_models.py  pyproject.toml
src/: main.py
src/api/v1/: auth_routes.py  tour_routes.py
src/database/: init_db.py
src/models/: auth.py  tour_models.py
src/schemas/: auth_schemas.py  tour_schemas.py
src/utils/: auth_helpers.py
